# OpenAI_SDK_Agent_02

./: README.md  main.py  pyproject.toml
src/agent_02/: __init__.py
